--- a/AutoCAD_DD/Properties/Resources.resx
+++ b/AutoCAD_DD/Properties/Resources.resx
@@ -118,17 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="pointBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Image\pointBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BlackPoint_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Image\BlackPoint_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pointGreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Image\pointGreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="GreenPoint_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Image\GreenPoint_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pointPurple" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Image\pointPurple.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="PurplePoint_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Image\PurplePoint_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pointRed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Image\pointRed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="RedPoint_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Image\RedPoint_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Image\settings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
